# AskAlfred

./: .gitignore  .pylintrc  .safety-policy.json  README.md  alfred_exceptions.py  analyse_events_jsonl.py  answer_generation.py  auth_manager.py  building_aliases_override.py  building_events.jsonl  building_normaliser.py  building_utils.py  building_validation.py  buildings_cache.py  business_terms.py  clients.py  config.py  csv_alias_helper.py  date_utils.py  desktop.ini  emojis.py  env_bootstrap.py  exceptions.py  extract_index_tocsv.py  filename_building_parser.py  generate_maintenance_answers.py  generate_semantic_answer.py  ingest_context.py  ingest_utils.py  input_validator.py  intent_classifier.py  local_batch_ingest.py  local_batch_ingest_text_fallback.py  main.py  maintenance_utils.py  markdown.py  metrics.prom  msal_auth.py  pinecone_utils.py  pyproject.toml  (+16 more)
.github/workflows/: ci.yml  security-scan.yml
auth/: __init__.py  access_control.py  auth_context.py  auth_manager.py  credential_manager.py  msal_auth.py
building/: __init__.py  alias_override.py  cache.py  filename_building_parser.py  normaliser.py  path_inventory.py  path_inventory_summary.py  resolver.py  text_fallback.py  utils.py
cli/: __init__.py  local_batch_ingest.py  resolve_buildings.py
config/: __init__.py  constant.py  settings.py
core/: __init__.py  alfred_exceptions.py  clients.py  date_utils.py  env_bootstrap.py  pinecone_utils.py  redis_lock_manager.py  session_manager.py
domain/: __init__.py  business_terms.py  maintenance_utils.py
fra/: __init__.py  doc_metadata.py  enrichment.py  integration.py  parser (old).py  parser.py  triage.py  types.py
fra/parse_helpers/: __init__.py  parse_row.py  parse_section.py  parse_table.py
ingest/: __init__.py  batch_ingest.py  context.py  document_content.py  document_processor.py  helpers.py  transaction.py  upsert_handler.py  utils.py
interfaces/: __init__.py  embedder.py  event_sink.py  ingest_file_registry.py  job_registry.py  vector_store.py
query_core/: __init__.py  intent_classifier.py  query_context.py  query_manager.py  query_result.py  query_route.py  query_types.py
query_handlers/: __init__.py  base_handler.py  conversational_handler.py  counting_handler.py  maintenance_handler.py  property_handler.py  ranking_handler.py  semantic_search_handler.py
query_preprocessors/: __init__.py  base_preprocessor.py  building_extractor.py  business_term_extractor.py  query_complexity_analyser.py  spell_checker.py
scripts/: security_scan.py
search_core/: __init__.py  generate_maintenance_answers.py  generate_semantic_answer.py  maintenance_search.py  planon_search.py  search_instructions.py  search_router.py  search_utils.py  semantic_search.py  structured_queries.py
security/: __init__.py  csv_sanitiser.py  file_operations_validator.py  input_validator.py  log_sanitiser.py  rate_limiter.py  sanitise_context.py
tests/: conftest.py  conftest_new_fixtures.py  parse_goldneyhall_fra.py  parse_goldneyhall_full_document.py  test_access_filter_threading.py  test_auth_manager.py  test_clients.py  test_credential_manager.py  test_csv_sanitiser.py  test_env_bootstrap.py  test_file_operations_validator.py  test_filename_building_parser.py  test_fra_parser.py  test_fra_triage.py  test_ingest_document_content.py  test_input_validator.py  test_log_sanitiser.py  test_msal_auth.py  test_parse_row_content.py  test_query_manager.py  test_rate_limiter.py  test_sanitise_context.py  test_upsert_handler.py
tools/: __init__.py  analyse_events_jsonl.py  extract_index_tocsv.py  extract_pdf_text.py  parse_goldneyhall_action_plan_from_full_text.py  profile_intent.py  redis_test.py  word_to_pdf.py
ui/: __init__.py  ui_components.py
