[tool.poetry]
name = "alfred-v3"
version = "0.1.0"
description = "Modular, hybrid-intent building-aware search assistant."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
anthropic = ">=0.66.0"
langchain = ">=1.2.0"
langchain-community = ">=0.4.0"
langchain-core = ">=1.2.11"
langchain-openai = ">=1.1.0"
langchain-text-splitters = ">=1.1.0"
langsmith = ">=0.7.0"
openai = ">=2.24.0"
tiktoken = ">=0.11.0"
transformers = ">=4.53.0"
tokenizers = ">=0.22.0"
sentence-transformers = ">=5.1.0"

pinecone = ">=7.3.0"
pinecone-plugin-assistant = ">=1.8.0"
pinecone-plugin-interface = ">=0.0.7"

torch = ">=2.9.0"
safetensors = ">=0.6.0"

numpy = ">=2.0"
pandas = ">=2.3.0"
scipy = ">=1.15.0"
scikit-learn = ">=1.7.0"
pyarrow = ">=21.0.0"

"pdfminer.six" = ">=20251230"
pdfplumber = ">=0.11.0"
pypdf = ">=6.7.5"
pypdfium2 = ">=4.30.0"

python-docx = ">=1.2.0"
openpyxl = ">=3.1.0"
xlrd = ">=2.0.0"
lxml = ">=6.0.0"

streamlit = ">=1.55.0"

aiohttp = ">=3.13.3"
httpx = ">=0.28.0"
requests = ">=2.32.4"
urllib3 = ">=2.6.3"

boto3 = ">=1.40.0"

Authlib = ">=1.6.6"
msal = ">=1.34.0"
PyJWT = ">=2.10.1"
cryptography = ">=46.0.5"

SQLAlchemy = ">=2.0.0"
redis = ">=7.1.0"

nltk = ">=3.9.0"
textblob = ">=0.19.0"
regex = ">=2025.8.0"

ctranslate2 = ">=4.7.0"
hf_hub_ctranslate2 = ">=2.13.0"

python-dotenv = ">=1.1.0"
PyYAML = ">=6.0.0"
toml = ">=0.10.0"
tomlkit = ">=0.14.0"
tomli_w = ">=1.2.0"
Jinja2 = ">=3.1.6"
click = ">=8.2.0"
typer = ">=0.24.0"
rich = ">=14.3.0"
tqdm = ">=4.67.0"
joblib = ">=1.5.0"
tenacity = ">=8.5.0"
cachetools = ">=6.2.0"
CacheControl = ">=0.14.0"
filelock = ">=3.20.3"
platformdirs = ">=4.9.0"

pydantic = ">=2.11.0"
marshmallow = ">=3.26.2"
dataclasses-json = ">=0.6.0"
jsonschema = ">=4.25.0"
orjson = ">=3.11.5"

GitPython = ">=3.1.41"

pip_audit = ">=2.10.0"
safety = ">=3.7.0"
safety-schemas = ">=0.0.16"
cyclonedx-python-lib = ">=11.6.0"

pytest = ">=8.4.0"

pillow = ">=12.1.1"

altair = ">=5.5.0"
pydeck = ">=0.9.0"

pywin32 = { version = ">=311", markers = "sys_platform == 'win32'" }

anyio = ">=4.10.0"

aiohappyeyeballs = "*"
aiosignal = "*"
annotated-doc = "*"
annotated-types = "*"
attrs = "*"
blinker = "*"
boolean-py = "*"
cffi = "*"
charset-normalizer = "*"
colorama = "*"
distro = "*"
et_xmlfile = "*"
frozenlist = "*"
fsspec = "*"
gitdb = "*"
greenlet = "*"
httpcore = "*"
iniconfig = "*"
jiter = "*"
jmespath = "*"
jsonpatch = "*"
jsonpointer = "*"
jsonschema-specifications = "*"
license-expression = "*"
MarkupSafe = "*"
mdurl = "*"
multidict = "*"
mypy_extensions = "*"
narwhals = "*"
networkx = "*"
packageurl-python = "*"
packaging = "*"
pip-api = "*"
pip-requirements-parser = "*"
pluggy = "*"
propcache = "*"
pycparser = "*"
pydantic_core = "*"
pyee = "*"
pyparsing = "*"
python-dateutil = "*"
pytz = "*"
referencing = "*"
requests-toolbelt = "*"
rpds-py = "*"
s3transfer = "*"
Send2Trash = "*"
shellingham = "*"
six = "*"
smmap = "*"
sniffio = "*"
sortedcontainers = "*"
threadpoolctl = "*"
typing-inspect = "*"
typing-inspection = "*"
typing_extensions = "*"
tzdata = "*"
watchdog = "*"
yarl = "*"

tornado = ">=6.5.0"
certifi = ">=2024.07.04"
protobuf = ">=6.33.5"
Pygments = ">=2.15.0"
websockets = ">=10.0"
markdown-it-py = ">=2.2.0"
h11 = ">=0.16.0"
idna = ">=3.7"
huggingface-hub = ">=0.13.4"
sympy = ">=1.12"
defusedxml = ">=0.4"
dparse = ">=0.5.2"
mpmath = ">=1.3.0"
msgpack = ">=0.6.0"
py-serializable = ">=0.11.1"
ruamel-yaml = ">=0.16.7"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
