[tool.poetry]
name = "alfred-v3"
version = "0.1.0"
description = "Modular, hybrid-intent building-aware search assistant."
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
security-scan = "scripts.security_scan:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = ">=2.24.0"
tiktoken = ">=0.11.0"
pinecone = ">=7.3.0"
numpy = ">=2.0"
pandas = ">=2.3.0"
"pdfminer.six" = ">=20251230"
pypdf = ">=6.7.5"
python-docx = ">=1.2.0"
streamlit = ">=1.55.0"
httpx = ">=0.28.0"
requests = ">=2.32.4"
msal = ">=1.34.0"
redis = ">=7.1.0"
textblob = ">=0.19.0"
hf_hub_ctranslate2 = ">=2.13.0"
# hf-hub-ctranslate2 imports torch at module load but does not declare it.
torch = ">=2.9.0"
python-dotenv = ">=1.1.0"
tqdm = ">=4.67.0"
MarkupSafe = "*"
markdown-pdf = ">=1.13.2"
Send2Trash = ">=2.1.0"
pywin32 = { version = ">=311", markers = "sys_platform == 'win32'" }

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.5,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "bandit (>=1.8.0,<2.0.0)",
    "pip-audit (>=2.10.0,<3.0.0)",
    "safety (>=3.7.0,<4.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
# Black owns line wrapping; E501 only flags the lines black chooses to leave
# long (URLs, prompts), so it stays off to keep ruff and black in agreement.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Bootstrap files must mutate sys.path / load .env before importing the app.
"cli/local_batch_ingest.py" = ["E402"]
"config/__init__.py" = ["E402"]
"config/settings.py" = ["E402"]
"tools/extract_pdf_text.py" = ["E402"]
